# kde-kdesdk

./: CMakeLists.txt  ConfigureChecks.cmake  config.h.cmake  configure  configure.in  kdesdk.lsm
cervisia/: CMakeLists.txt  Makefile.in
cervisia/cvsservice/: CMakeLists.txt
doc/cervisia/: CMakeLists.txt  index.cache.bz2
doc/kbabel/: CMakeLists.txt  index.cache.bz2
doc/kbugbuster/: CMakeLists.txt  index.cache.bz2
doc/kcachegrind/: CMakeLists.txt  index.cache.bz2
doc/kompare/: CMakeLists.txt  index.cache.bz2
doc/scripts/: CMakeLists.txt
doc/scripts/kdesvn-build/: CMakeLists.txt  index.cache.bz2
doc/umbrello/: CMakeLists.txt  index.cache.bz2
kapptemplate/: CMakeLists.txt  kapptemplate.cmake
kapptemplate/admin/: CMakeLists.txt
kapptemplate/appframework/: CMakeLists.txt
kapptemplate/appframework/no-exe/: CMakeLists.txt
kapptemplate/existing/: CMakeLists.txt
kapptemplate/kapp/: CMakeLists.txt
kapptemplate/kapp/no-exe/: CMakeLists.txt
kapptemplate/kpartapp/: CMakeLists.txt
kapptemplate/kpartapp/no-exe/: CMakeLists.txt
kapptemplate/kpartplugin/: CMakeLists.txt
kapptemplate/kpartplugin/no-exe/: CMakeLists.txt
kbabel/: CMakeLists.txt  ConfigureChecks.cmake
kbabel/addons/: CMakeLists.txt
kbabel/addons/kfile-plugins/: CMakeLists.txt  kfile_po.desktop
kbabel/addons/preview/: CMakeLists.txt  pothumbnail.desktop
kbabel/catalogmanager/: CMakeLists.txt  catalogmanager.desktop
kbabel/catalogmanager/icons/: CMakeLists.txt
kbabel/catalogmanager/libcvs/: CMakeLists.txt
kbabel/catalogmanager/libsvn/: CMakeLists.txt
kbabel/common/: CMakeLists.txt  kbabelfilter.desktop
kbabel/common/libgettext/: CMakeLists.txt
kbabel/commonui/: CMakeLists.txt  kbabel_tool.desktop  kbabel_validator.desktop
kbabel/datatools/: CMakeLists.txt
kbabel/datatools/accelerators/: CMakeLists.txt  kbabel_accelstool.desktop
kbabel/datatools/arguments/: CMakeLists.txt  kbabel_argstool.desktop
kbabel/datatools/context/: CMakeLists.txt  kbabel_contexttool.desktop
kbabel/datatools/equations/: CMakeLists.txt  kbabel_equationstool.desktop
kbabel/datatools/length/: CMakeLists.txt  kbabel_lengthtool.desktop
kbabel/datatools/not-translated/: CMakeLists.txt  kbabel_nottranslatedtool.desktop
kbabel/datatools/pluralforms/: CMakeLists.txt  kbabel_pluralformstool.desktop
kbabel/datatools/punctuation/: CMakeLists.txt  kbabel_punctuationtool.desktop
kbabel/datatools/regexp/: CMakeLists.txt  kbabel_regexptool.desktop
kbabel/datatools/setfuzzy/: CMakeLists.txt  kbabel_setfuzzytool.desktop
kbabel/datatools/whitespace/: CMakeLists.txt  kbabel_whitespacetool.desktop
kbabel/datatools/xml/: CMakeLists.txt  kbabel_xmltool.desktop
kbabel/filters/: CMakeLists.txt
kbabel/filters/gettext/: CMakeLists.txt  kbabel_gettext_export.desktop  kbabel_gettext_import.desktop
kbabel/filters/linguist/: CMakeLists.txt  kbabel_linguist_export.desktop  kbabel_linguist_import.desktop
kbabel/filters/xliff/: CMakeLists.txt  kbabel_xliff_export.desktop  kbabel_xliff_import.desktop
kbabel/kbabel/: CMakeLists.txt  kbabel.desktop
kbabel/kbabel/icons/: CMakeLists.txt
kbabel/kbabel/pics/: CMakeLists.txt
kbabel/kbabeldict/: CMakeLists.txt  kbabeldict.desktop  kbabeldict_module.desktop
kbabel/kbabeldict/modules/: CMakeLists.txt
kbabel/kbabeldict/modules/dbsearchengine/: CMakeLists.txt  ConfigureChecks.cmake  dbsearchengine.desktop
kbabel/kbabeldict/modules/dbsearchengine2/: dbsearchengine2.desktop
kbabel/kbabeldict/modules/poauxiliary/: CMakeLists.txt  poauxiliary.desktop
kbabel/kbabeldict/modules/pocompendium/: CMakeLists.txt  pocompendium.desktop
kbabel/kbabeldict/modules/tmx/: CMakeLists.txt  tmxcompendium.desktop
kbugbuster/: CMakeLists.txt  kbugbuster.desktop
kbugbuster/backend/: CMakeLists.txt
kbugbuster/gui/: CMakeLists.txt
kbugbuster/kresources/: CMakeLists.txt  bugzilla.desktop
kbugbuster/pics/: CMakeLists.txt
kcachegrind/: CMakeLists.txt  ConfigureChecks.cmake
kcachegrind/converters/: CMakeLists.txt
kcachegrind/kcachegrind/: CMakeLists.txt
kcachegrind/pics/: CMakeLists.txt
kcachegrind/pics/hicolor/: CMakeLists.txt
kdeaccounts-plugin/: CMakeLists.txt  kdeaccountsplugin.desktop
kfile-plugins/: CMakeLists.txt
kfile-plugins/c++/: CMakeLists.txt
kfile-plugins/diff/: CMakeLists.txt
kfile-plugins/ts/: CMakeLists.txt
kioslave/: CMakeLists.txt
kioslave/svn/: CMakeLists.txt  ConfigureChecks.cmake
kioslave/svn/ksvnd/: CMakeLists.txt
kioslave/svn/svnhelper/: CMakeLists.txt
kmtrace/: CMakeLists.txt  kminspector.cmake
kompare/: CMakeLists.txt
kompare/interfaces/: CMakeLists.txt
kompare/komparenavtreepart/: CMakeLists.txt
kompare/komparepart/: CMakeLists.txt
kompare/libdialogpages/: CMakeLists.txt
kompare/libdiff2/: CMakeLists.txt
kprofilemethod/: CMakeLists.txt
kspy/: CMakeLists.txt
kstartperf/: CMakeLists.txt
kuiviewer/: CMakeLists.txt
kunittest/: CMakeLists.txt
poxml/antlr/antlr/: CharScanner.hpp
scheck/: scheck.themerc
umbrello/: CMakeLists.txt  ConfigureChecks.cmake
umbrello/umbrello/: CMakeLists.txt
umbrello/umbrello/clipboard/: CMakeLists.txt
umbrello/umbrello/codegenerators/: CMakeLists.txt
umbrello/umbrello/codeimport/: CMakeLists.txt
umbrello/umbrello/codeimport/kdevcppparser/: CMakeLists.txt
umbrello/umbrello/dialogs/: CMakeLists.txt
umbrello/umbrello/docgenerators/: CMakeLists.txt
umbrello/umbrello/headings/: CMakeLists.txt
umbrello/umbrello/pics/: CMakeLists.txt
umbrello/umbrello/refactoring/: CMakeLists.txt
