#################################################
#
#  (C) 2010-2012 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

include( ConfigureChecks.cmake )

add_subdirectory( common )
add_subdirectory( filters )
add_subdirectory( datatools )
add_subdirectory( kbabeldict )
add_subdirectory( commonui )
add_subdirectory( catalogmanager )
add_subdirectory( kbabel )
add_subdirectory( addons )
