#################################################
#
#  (C) 2010-2012 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

add_subdirectory( arguments )
add_subdirectory( accelerators )
add_subdirectory( context )
add_subdirectory( equations )
add_subdirectory( pluralforms )
add_subdirectory( xml )
add_subdirectory( not-translated )
add_subdirectory( whitespace )
add_subdirectory( length )
add_subdirectory( setfuzzy )
add_subdirectory( punctuation )
add_subdirectory( regexp )
