#################################################
#
#  (C) 2010-2012 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES
    tools.png logo.png bars.png top-right.png
  DESTINATION ${DATA_INSTALL_DIR}/kbugbuster/pics )
